POWR-412 move alerts to top of header and add styles around featured-top

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -7350,6 +7350,7 @@ div.paragraph--type--video figure.figure, div.paragraph--type--audio figure.figu
     float: none; } }
 
 .header {
+  background-image: linear-gradient(to bottom right, #069b52, #046a38);
   background-color: #046a38;
   border-top: 5px #ffb81c solid;
   border-bottom: 5px #418fde solid; }
@@ -7386,6 +7387,10 @@ div.paragraph--type--video figure.figure, div.paragraph--type--audio figure.figu
     transition: background-color 0.25s ease, font-size 0.25s ease; }
     .navbar .navbar-nav .nav-link:hover {
       background-color: rgba(0, 0, 0, 0.15); } }
+
+.featured-top {
+  background-image: linear-gradient(to bottom right, #418fde, #1b5a99);
+  background-color: #046a38; }
 
 /**
  * @file
@@ -8221,7 +8226,7 @@ td .form-check-input {
 
 .block-region-actions .icon,
 .block-region-audiences .icon {
-  font-size: 1.26562rem; }
+  font-size: 3rem; }
 
 .block-region-actions .list-group-item-action,
 .block-region-audiences .list-group-item-action {
