--- a/web/themes/custom/cloudy/scss/components/header.scss
+++ b/web/themes/custom/cloudy/scss/components/header.scss
@@ -39,6 +39,7 @@
 }
 
 .header {
+    background-image: linear-gradient(to bottom right, $primary-accent, $primary-shade);
     background-color: $primary-shade;
     border-top: 5px $yellow solid;
     border-bottom: 5px $accent-shade solid;
@@ -79,4 +80,9 @@
       }
     }
   }
+}
+
+.featured-top {
+  background-image: linear-gradient(to bottom right, $accent-shade, $accent-dark);
+  background-color: $primary-shade;
 }
