--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -215,7 +215,7 @@ td .form-check-input {
 
 .block-region-actions .icon,
 .block-region-audiences .icon {
-  font-size: $font-size-xl;
+  font-size: 3rem;
 }
 
 .block-region-actions .list-group-item-action,
