--- a/web/themes/custom/cloudy/scss/variables.scss
+++ b/web/themes/custom/cloudy/scss/variables.scss
@@ -2,6 +2,7 @@
 
 // colors
 $primary-shade: #046a38;
+$primary-accent: lighten($primary-shade, 10%);
 $primary-light: lighten($primary-shade, 80%);
 $primary-dark: darken($primary-shade, 12%);
 $accent-shade: #418fde;
