--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -69,6 +69,7 @@
 #}
 <div id="page-wrapper">
   <div id="page">
+    <div class="container-fluid">{{ page.top_header }}</div>
     <header id="header" class="header" aria-label="{{ 'Site header'|t}}">
       {% block head %}
         <nav{{ navbar_attributes }}>
