--- a/web/modules/custom/portland/templates/portland-alert.html.twig
+++ b/web/modules/custom/portland/templates/portland-alert.html.twig
@@ -26,13 +26,15 @@
 {% set alert_classes = [
   'portland-alert',
   'card',
-  'mb-2',
+  'border-0',
+  'rounded-0',
   dismissible == 1 ? 'd-none' : '',
 ] %}
 
 {% set header_attribute = create_attribute() %}
 {% set header_classes = [
   'card-header',
+  'rounded-0',
   'd-flex',
   'align-items-center',
   'font-weight-bold',
@@ -77,7 +79,7 @@
   <div class="card-body">
     <div class="card-title">
       {% if title %}
-        <h3>{{ title }}</h3>
+        <strong>{{ title }}</strong>
       {% endif %}
     </div>
     <div>
