POWR-412 carry over gradient into bureau color example

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -7355,6 +7355,23 @@ div.paragraph--type--video figure.figure, div.paragraph--type--audio figure.figu
   border-top: 5px #ffb81c solid;
   border-bottom: 5px #418fde solid; }
 
+.banner {
+  background-image: linear-gradient(to bottom right, #505050, #000000);
+  background-color: #343a40;
+  color: #f8f9fa;
+  min-height: 70px; }
+
+.transportation .header {
+  background-image: linear-gradient(to bottom right, #505050, #000000);
+  background-color: #343a40;
+  color: #f8f9fa;
+  border: 0px #505050 solid; }
+
+.transportation .banner {
+  background-image: linear-gradient(to bottom right, #FF8226, #bf5100);
+  background-color: #FF8226;
+  color: white; }
+
 .navbar {
   padding: 0;
   min-height: 80px; }
@@ -8135,20 +8152,6 @@ a {
   font-size: 2rem;
   text-decoration: none; }
 
-.banner {
-  background-color: #505050;
-  color: #f8f9fa;
-  min-height: 70px; }
-
-.transportation .banner {
-  background-color: #FF8226;
-  color: white; }
-
-.transportation .header {
-  background-color: #505050;
-  color: #f8f9fa;
-  border: 0px #505050 solid; }
-
 .site-name-slogan a {
   color: #ffffff; }
 
@@ -8226,7 +8229,7 @@ td .form-check-input {
 
 .block-region-actions .icon,
 .block-region-audiences .icon {
-  font-size: 1.26562rem; }
+  font-size: 3rem; }
 
 .block-region-actions .list-group-item-action,
 .block-region-audiences .list-group-item-action {
