--- a/web/themes/custom/cloudy/scss/components/header.scss
+++ b/web/themes/custom/cloudy/scss/components/header.scss
@@ -45,6 +45,27 @@
     border-bottom: 5px $accent-shade solid;
 }
 
+.banner {
+  background-image: linear-gradient(to bottom right, #505050, #000000);
+  background-color: $dark;
+  color: #f8f9fa;
+  min-height: 70px;
+}
+
+
+.transportation .header {
+  background-image: linear-gradient(to bottom right, #505050, #000000);
+  background-color: $dark;
+  color: #f8f9fa;
+  border: 0px #505050 solid;
+}
+
+.transportation .banner {
+  background-image: linear-gradient(to bottom right, #FF8226, darken(#ff8226,20%));
+  background-color: #FF8226;
+  color: white;
+}
+
 .navbar {
   padding: 0;
   min-height: 80px;
