--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -7486,12 +7486,13 @@ div.paragraph--type--video figure.figure, div.paragraph--type--audio figure.figu
   padding: 0.75rem 1.25rem 0 0;
   /* LTR */ }
 
-.block-region-actions .item-list ul li:last-child,
-.block-region-audiences .item-list ul li:last-child {
-  /* This is needed to reset styles in item-list.theme.css */
-  margin: 0;
-  padding: 0.75rem 0 0 0;
-  /* LTR */ }
+@media (min-width: 992px) {
+  .block-region-actions .item-list ul li:last-child,
+  .block-region-audiences .item-list ul li:last-child {
+    /* This is needed to reset styles in item-list.theme.css */
+    margin: 0;
+    padding: 0.75rem 0 0 0;
+    /* LTR */ } }
 
 [dir="rtl"] .item-list ul li {
   /* This is needed to reset [dir="rtl"] styles in item-list.theme.css */
