--- a/web/themes/custom/cloudy/scss/components/item-list.scss
+++ b/web/themes/custom/cloudy/scss/components/item-list.scss
@@ -23,10 +23,12 @@
 
 .block-region-actions .item-list ul li:last-child,
 .block-region-audiences .item-list ul li:last-child {
+    @media (min-width: 992px) {
     /* This is needed to reset styles in item-list.theme.css */
     margin: 0;
     padding: $list-group-item-padding-y 0 0 0;
     /* LTR */
+    }
 }
 
 [dir="rtl"] .item-list ul li {
