POWR-412 override search input button style and move featured top above hightlighted

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -7669,6 +7669,11 @@ input[type="search"] {
 .region-featured-top #search-api-page-block-form {
   width: 100%; }
 
+#search-api-page-block-form input.btn-primary {
+  color: #505050;
+  background: #f8f9fa;
+  border: 1px solid #ced4da; }
+
 /**
  * @file
  * Visual styles for the Shortcut action link in Bootstrap Barrio.
