--- a/web/themes/custom/cloudy/scss/components/search-form.scss
+++ b/web/themes/custom/cloudy/scss/components/search-form.scss
@@ -20,3 +20,9 @@ input[type="search"] {
 .region-featured-top #search-api-page-block-form {
     width: 100%;
 }
+
+#search-api-page-block-form input.btn-primary {
+  color: #505050;
+  background: $light;
+  border: 1px solid #ced4da;
+}
