POWR-425 add some column and image float styles.

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -6843,6 +6843,18 @@ a.text-dark:hover, a.text-dark:focus {
 
 /**
  * @file
+ * Column styles
+ */
+.paragraph--type--columns-equal .row .col-lg:first-child {
+  margin-left: 0px;
+  padding-left: 0px; }
+
+.paragraph--type--columns-equal .row .col-lg:last-child {
+  margin-right: 0px;
+  padding-right: 0px; }
+
+/**
+ * @file
  * Visual styles for comments in Bartik.
  */
 /* This is required to win over specificity of #content h2 */
@@ -8318,3 +8330,14 @@ span.mailto::before {
   span.mailto {
     display: none;
     padding: 0; } }
+
+/* Add some margin on floated images */
+.float-left .figure {
+  margin-right: 2rem; }
+
+.float-right .figure {
+  margin-left: 2rem; }
+
+.figure-caption {
+  margin-top: -1rem;
+  font-size: 0.88889rem; }
