--- a/web/themes/custom/cloudy/scss/barrio.scss
+++ b/web/themes/custom/cloudy/scss/barrio.scss
@@ -3,6 +3,7 @@
 @import "./components/book";
 @import "./components/book-navigation";
 @import "./components/breadcrumb";
+@import "./components/columns";
 @import "./components/comments";
 @import "./components/contextual";
 @import "./components/details";
