--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -304,3 +304,18 @@ span.mailto::before {
     padding: 0;
   }
 }
+
+/* Add some margin on floated images */
+
+.float-left .figure{
+  margin-right: 2rem;
+}
+
+.float-right .figure{
+  margin-left: 2rem;
+}
+
+.figure-caption {
+  margin-top: -1rem;
+  font-size: $font-size-sm;
+}
