POWR-388 refactor for button instead of badge

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -4520,7 +4520,7 @@ button.bg-dark:focus {
 .d-table-cell {
   display: table-cell !important; }
 
-.d-flex {
+.d-flex, .navbar-brand img {
   display: flex !important; }
 
 .d-inline-flex {
@@ -7679,8 +7679,7 @@ input[type="search"] {
   width: 100%; }
 
 .region-featured-top #search-api-page-block-form {
-  width: 100%;
-  padding-bottom: 0.2rem; }
+  width: 100%; }
 
 #search-api-page-block-form input.btn-primary {
   color: #505050;
@@ -8342,3 +8341,6 @@ span.mailto::before {
 .figure-caption {
   margin-top: -1rem;
   font-size: 0.88889rem; }
+
+.navbar-brand img {
+  display: block; }
