--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -319,3 +319,8 @@ span.mailto::before {
   margin-top: -1rem;
   font-size: $font-size-sm;
 }
+
+.navbar-brand img {
+  @extend .d-flex;
+  display: block;
+}
