--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -4520,7 +4520,7 @@ button.bg-dark:focus {
 .d-table-cell {
   display: table-cell !important; }
 
-.d-flex {
+.d-flex, .navbar-brand img {
   display: flex !important; }
 
 .d-inline-flex {
@@ -8341,3 +8341,6 @@ span.mailto::before {
 .figure-caption {
   margin-top: -1rem;
   font-size: 0.88889rem; }
+
+.navbar-brand img {
+  display: block; }
