POWR-388 add corrected styles and anonymous login setting.

--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -324,3 +324,7 @@ span.mailto::before {
   @extend .d-flex;
   display: block;
 }
+
+.view-top-searches .item-list ul li:last-child {
+  padding-right: 0;
+}
