--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -7498,14 +7498,6 @@ div.paragraph--type--video figure.figure, div.paragraph--type--audio figure.figu
   padding: 0.75rem 1.25rem 0 0;
   /* LTR */ }
 
-@media (min-width: 992px) {
-  .block-region-actions .item-list ul li:last-child,
-  .block-region-audiences .item-list ul li:last-child {
-    /* This is needed to reset styles in item-list.theme.css */
-    margin: 0;
-    padding: 0.75rem 0 0 0;
-    /* LTR */ } }
-
 [dir="rtl"] .item-list ul li {
   /* This is needed to reset [dir="rtl"] styles in item-list.theme.css */
   margin: 0;
@@ -7516,6 +7508,22 @@ div.paragraph--type--video figure.figure, div.paragraph--type--audio figure.figu
 [dir="rtl"] .item-list .item-list__comma-list,
 [dir="rtl"] .item-list .item-list__comma-list li {
   padding: 0; }
+
+@media (min-width: 992px) {
+  .block-region-actions .item-list ul li:last-child,
+  .block-region-audiences .item-list ul li:last-child {
+    /* This is needed to reset styles in item-list.theme.css */
+    margin: 0;
+    padding: 0.75rem 0 0 0;
+    /* LTR */ } }
+
+@media (max-width: 991.98px) {
+  .block-region-actions .item-list ul li,
+  .block-region-audiences .item-list ul li {
+    /* This is needed to reset styles in item-list.theme.css */
+    margin: 0;
+    padding: 0.75rem 0 0 0;
+    /* LTR */ } }
 
 /**
  * @file
@@ -8344,3 +8352,6 @@ span.mailto::before {
 
 .navbar-brand img {
   display: block; }
+
+.view-top-searches .item-list ul li:last-child {
+  padding-right: 0; }
