--- a/web/themes/custom/cloudy/scss/components/item-list.scss
+++ b/web/themes/custom/cloudy/scss/components/item-list.scss
@@ -21,16 +21,6 @@
     /* LTR */
 }
 
-.block-region-actions .item-list ul li:last-child,
-.block-region-audiences .item-list ul li:last-child {
-    @media (min-width: 992px) {
-    /* This is needed to reset styles in item-list.theme.css */
-    margin: 0;
-    padding: $list-group-item-padding-y 0 0 0;
-    /* LTR */
-    }
-}
-
 [dir="rtl"] .item-list ul li {
     /* This is needed to reset [dir="rtl"] styles in item-list.theme.css */
     margin: 0;
@@ -42,4 +32,24 @@
 [dir="rtl"] .item-list .item-list__comma-list,
 [dir="rtl"] .item-list .item-list__comma-list li {
     padding: 0;
+}
+
+.block-region-actions .item-list ul li:last-child,
+.block-region-audiences .item-list ul li:last-child {
+    @media (min-width: 992px) {
+    /* This is needed to reset styles in item-list.theme.css */
+    margin: 0;
+    padding: $list-group-item-padding-y 0 0 0;
+    /* LTR */
+    }
+}
+
+.block-region-actions .item-list ul li,
+.block-region-audiences .item-list ul li {
+    @media (max-width: 991.98px) {
+    /* This is needed to reset styles in item-list.theme.css */
+    margin: 0;
+    padding: $list-group-item-padding-y 0 0 0;
+    /* LTR */
+    }
 }
