--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -6776,6 +6776,9 @@ a.text-dark:hover, a.text-dark:focus {
 .portland-alert .btn {
   white-space: inherit; }
 
+.block-views-blockalerts-block-1 {
+  width: 100%; }
+
 /**
  * @file
  * Bootstrap Barrio specific styling for the Book module.
@@ -8355,8 +8358,3 @@ span.mailto::before {
 
 .view-top-searches .item-list ul li:last-child {
   padding-right: 0; }
-
-/* IE 11 hack to fix text wrapping issue in alerts caused by overflow bug in nested flex containers 
-  https://github.com/philipwalton/flexbugs/issues/170 */
-_:-ms-fullscreen, :root .row.region-top-header {
-  display: block; }
