POWR-322 adjust styles for new alert template

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -6770,11 +6770,16 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     opacity: 1; }
 
-.portland-alert .fa {
+.portland-alert .fas {
   font-size: 2rem; }
 
 .portland-alert .btn {
-  white-space: inherit; }
+  border: .025em solid;
+  border-bottom: .175em solid;
+  border-color: rgba(0, 0, 0, 0.6); }
+  .portland-alert .btn:hover {
+    text-decoration: none;
+    border-color: transparent; }
 
 .block-views-blockalerts-block-1 {
   width: 100%; }
