--- a/web/themes/custom/cloudy/scss/components/alerts.scss
+++ b/web/themes/custom/cloudy/scss/components/alerts.scss
@@ -14,11 +14,17 @@
       opacity: 1;
     }
   }
-  .fa {
+  .fas {
     font-size: 2rem;
   }
   .btn {
-    white-space: inherit;
+    border: .025em solid;
+    border-bottom: .175em solid;
+    border-color: rgba(0,0,0,.6);
+    &:hover {
+      text-decoration: none;
+      border-color: transparent;
+    }
   }
 }
 
