POWR-322 Modify alert template and style to make it more compact

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -6761,25 +6761,14 @@ a.text-dark:hover, a.text-dark:focus {
  * @file
  * Visual styles for alerts in Cloudy.
  */
-.portland-alert .close {
-  font-size: 2rem;
-  color: inherit;
-  opacity: 1;
-  text-shadow: none; }
-  .portland-alert .close:not(:disabled):not(.disabled):hover {
-    color: inherit;
-    opacity: 1; }
-
 .portland-alert .fas {
   font-size: 2rem; }
 
-.portland-alert .btn {
-  border: .025em solid;
-  border-bottom: .175em solid;
-  border-color: rgba(0, 0, 0, 0.6); }
-  .portland-alert .btn:hover {
-    text-decoration: none;
-    border-color: transparent; }
+.portland-alert a {
+  border-bottom: .125em solid;
+  text-decoration: none; }
+  .portland-alert a:hover {
+    text-decoration: none; }
 
 .block-views-blockalerts-block-1 {
   width: 100%; }
