--- a/web/themes/custom/cloudy/scss/components/alerts.scss
+++ b/web/themes/custom/cloudy/scss/components/alerts.scss
@@ -4,26 +4,14 @@
  */
 
 .portland-alert {
-  .close {
-    font-size: 2rem;
-    color: inherit;
-    opacity: 1;
-    text-shadow: none;
-    &:not(:disabled):not(.disabled):hover {
-      color: inherit;
-      opacity: 1;
-    }
-  }
   .fas {
     font-size: 2rem;
   }
-  .btn {
-    border: .025em solid;
-    border-bottom: .175em solid;
-    border-color: rgba(0,0,0,.6);
+  a {
+    border-bottom: .125em solid;
+    text-decoration: none;
     &:hover {
       text-decoration: none;
-      border-color: transparent;
     }
   }
 }
