--- a/web/themes/custom/cloudy/templates/portland/portland-alert.html.twig
+++ b/web/themes/custom/cloudy/templates/portland/portland-alert.html.twig
@@ -29,6 +29,7 @@
   'container-fluid',
   'py-4',
   'flex-row',
+  'align-items-start',
   'border-0',
   'rounded-0',
   type == '10' ? 'bg-danger' : '',
@@ -45,40 +46,30 @@
 
 {% set icon_attributes = create_attribute() %}
 {% set icon_classes = [
-  'align-self-start',
   'pr-3',
 ] %}
 
 {% set body_attributes = create_attribute() %}
 {% set body_classes = [
-  'flex-grow-1',
   'd-flex',
   'flex-column',
 ] %}
 
 {% set footer_attributes = create_attribute() %}
 {% set footer_classes = [
-  'd-flex',
-  'flex-column',
-  'flex-sm-row',
-  'align-items-baseline',
+  'align-self-end',
+  'font-talic',
 ] %}
 
 {% set link_attributes = create_attribute() %}
 {% set link_classes = [
-  'mt-2',
-  'mr-3',
+  'mx-1',
   'font-weight-bold',
-  'btn',
-  type == '10' ? 'btn-danger' : '',
-  type == '20' ? 'btn-warning' : '',
-  type == '30' ? 'btn-secondary' :'',
 ] %}
 
 {% set dismiss_attributes = create_attribute() %}
 {% set dismiss_classes = [
-  'mt-2',
-  'px-2',
+  'mx-1',
   'font-weight-bold',
 ] %}
 
@@ -89,29 +80,25 @@
   </div>
   {%- endif -%}
   <div{{ body_attributes.addClass(body_classes) }}>
-    {%- if title -%}
-    <h3>
-        <strong>{{- title -}}</strong>
-    </h3>
-    {%- endif -%}
-    <p>
+    <span>
       {{- text -}}
-    </p>
-    <div{{ footer_attributes.addClass(footer_classes) }}>
       {%- if link_url -%}
       {% spaceless %}
         <a{{ link_attributes.addClass(link_classes).addClass(text_classes).setAttribute('href', link_url) }}>
           {{- link_text -}}
         </a>
+        {%- if dismissible == 1 -%}
+          or
+        {%- endif -%}
       {% endspaceless %}
       {%- endif -%}
       {%- if dismissible == 1 -%}
         <a{{ dismiss_attributes.addClass(dismiss_classes).addClass(text_classes).setAttribute('href', '#') }} type="close" aria-label="Close"><span aria-hidden="true">{{ 'Dismiss'|trans }}</span></a>
       {%- endif -%}
+    </span>
+    <div{{ footer_attributes.addClass(footer_classes) }}>
       {%- if changed -%}
-        <span class="ml-auto">
-            {{- changed -}}
-        </span>
+        {{- changed -}}
       {%- endif -%}
     </div>
   </div>
