POWR-115 - initial commit of POC work to implement bootstrap gallery carousel lightbox.

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -8358,3 +8358,11 @@ span.mailto::before {
 
 .view-top-searches .item-list ul li:last-child {
   padding-right: 0; }
+
+/* --------------- styles for powr-115 poc ------------ */
+
+.field--name-field-gallery-media img { width: auto; }
+.field--name-field-gallery-media .field__item { display: inline-block; }
+.modal.and.carousel {
+  position: fixed;
+}
