POWR-391 Update ext button class

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -8305,7 +8305,7 @@ blockquote.blockquote {
   border-left: 5px solid #dee2e6;
   padding-left: 1rem; }
 
-span.ext::before {
+.ext::after {
   display: inline-block;
   vertical-align: middle;
   font-style: normal;
