--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -260,7 +260,7 @@ blockquote.blockquote {
 
 // External links
 
-span.ext::before {
+.ext::after {
   display: inline-block;
   vertical-align: middle;
   font-style: normal;
