POWR-391 Extend fa icon for external links and buttons

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
 Theme Name: Bootstrap 4 Sass
 Description: Bootstrap 4 with Sass
@@ -6377,6 +6378,19 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6; } }
 
+/* EXTENDS */
+.btn.ext:after, span.ext:after {
+  display: inline-block;
+  vertical-align: middle;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Font Awesome 5 Free";
+  font-size: 0.88889rem;
+  font-weight: 900;
+  padding-left: .5rem; }
+
 /* MIXINS */
 .btn-primary a {
   color: #fff;
@@ -8305,18 +8319,8 @@ blockquote.blockquote {
   border-left: 5px solid #dee2e6;
   padding-left: 1rem; }
 
-.ext::after {
-  display: inline-block;
-  vertical-align: middle;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  font-family: "Font Awesome 5 Free";
-  font-size: 0.88889rem;
-  font-weight: 900;
-  padding-left: .5rem;
-  content: "\f35d"; }
+.btn.ext:after, span.ext:after {
+  content: ""; }
 
 span.mailto::before {
   background: none; }
