--- a/web/themes/custom/cloudy/scss/import.scss
+++ b/web/themes/custom/cloudy/scss/import.scss
@@ -4,6 +4,8 @@
 @import "variables";
 // typography
 @import "typography";
+// icons
+@import "icons";
 //bootstrap
 @import "../node_modules/bootstrap/scss/bootstrap";
 //material design bootstrap
