--- a/web/themes/custom/cloudy/scss/mixins.scss
+++ b/web/themes/custom/cloudy/scss/mixins.scss
@@ -1,3 +1,22 @@
+
+/* EXTENDS */
+
+//
+// FontAwesome icon
+//
+%font-awesome-icon {
+  display: inline-block;
+  vertical-align: middle;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Font Awesome 5 Free";
+  font-size: $font-size-sm;
+  font-weight: 900;
+  padding-left: .5rem;
+}
+
 /* MIXINS */
 
 //
