--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -260,18 +260,11 @@ blockquote.blockquote {
 
 // External links
 
-.ext::after {
-  display: inline-block;
-  vertical-align: middle;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  font-family: "Font Awesome 5 Free";
-  font-size: $font-size-sm;
-  font-weight: 900;
-  padding-left: .5rem;
-  content: "\f35d";
+.btn.ext, span.ext {
+  &:after {
+    @extend %font-awesome-icon;
+    content: $ext-icon;
+  }
 }
 
 span.mailto::before {
