POWR-391 Remove ext class from external buttons and rely on external links module

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -6379,7 +6379,7 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6; } }
 
 /* EXTENDS */
-.btn.ext:after, span.ext:after {
+span.ext:after {
   display: inline-block;
   vertical-align: middle;
   font-style: normal;
@@ -8319,7 +8319,7 @@ blockquote.blockquote {
   border-left: 5px solid #dee2e6;
   padding-left: 1rem; }
 
-.btn.ext:after, span.ext:after {
+span.ext:after {
   content: ""; }
 
 span.mailto::before {
