--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -260,7 +260,7 @@ blockquote.blockquote {
 
 // External links
 
-.btn.ext, span.ext {
+span.ext {
   &:after {
     @extend %font-awesome-icon;
     content: $ext-icon;
