POWR-391 Update button classes to use btn-cta

--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -145,6 +145,33 @@ ol.steps ol ol, ol.steps ol ul, ol.steps ul ol, ol.steps ul ul {
 
 // Paragraph buttons
 
+.btn-cta {
+  @extend .btn;
+  @extend .btn-primary;
+  @extend .btn-lg;
+  color: $white;
+  background-color: $primary-shade;
+  border: none;
+  &:hover {
+    text-decoration: none;
+    background-color: darken($primary-shade, 5%);
+    border: none;
+  }
+  &:focus, &:not(:disabled):not(.disabled):active:focus {
+    box-shadow: none;
+  }
+}
+
+.btn-cta-outline {
+  @extend .btn;
+  @extend .btn-outline-primary;
+  @extend .btn-lg;
+  &:focus, &:not(:disabled):not(.disabled):active:focus {
+    box-shadow: none;
+  }
+}
+
+
 *[class*="btn--"]:before {
   display: inline-block;
   padding-right: 0.5rem;
