POWR-469 Fix top searches margin

--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -101,7 +101,7 @@
     {% endif %}
     {% if page.featured_top %}
       {% block featured %}
-        <div class="featured-top">
+        <div class="featured-top pt-3 pb-3">
           <aside class="featured-top__inner section {{ container }} clearfix" role="complementary">
             {{ page.featured_top }}
           </aside>
