POWR-428 step refactor, breadcrumbs, card-deck

--- a/web/themes/custom/cloudy/scss/components/_breadcrumb.scss
+++ b/web/themes/custom/cloudy/scss/components/_breadcrumb.scss
@@ -5,9 +5,14 @@
 
 .breadcrumb {
     font-size: 0.929em$font-size-sm;
+    padding: 0.75rem 0;
+    background: none;
+    ol {
+        margin:0;
+    }
 }
 
 .region-breadcrumb {
-    padding: 0 15px 0.25em;
+    padding: 0 15px;
     width: 100%;
 }
