POWR-478 Add style change for testing

--- a/web/themes/custom/cloudy/scss/components/_header.scss
+++ b/web/themes/custom/cloudy/scss/components/_header.scss
@@ -104,6 +104,5 @@
 }
 
 .featured-top {
-  background-image: linear-gradient(to bottom right, $accent-shade, $accent-dark);
-  background-color: $primary-shade;
+  background-color: $gray-100;
 }
