POWR-428 more small updates to display and layout.

--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -139,10 +139,11 @@
                 </aside>
               </div>
             {% endif %}
-            {% if page.sidebar_second %}
-              <div{{ sidebar_second_attributes }}>
+            {% set sidebar_second = page.sidebar_second|render %}
+            {% if sidebar_second %}
+               <div{{ sidebar_second_attributes }}>
                 <aside class="section" role="complementary">
-                  {{ page.sidebar_second }}
+                  {{ sidebar_second }}
                 </aside>
               </div>
             {% endif %}
