--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -328,6 +328,6 @@ span.mailto::before {
   padding-right: 0;
 }
 
-h1, h2, h3, h4, h5, h6, p, blockquote, hr, .list-group-item, .paragraph ul, .paragraph ol, .figure-caption {
+h2, h3, h4, h5, h6, p, blockquote, hr, .list-group-item, .paragraph ul, .paragraph ol, .figure-caption {
   max-width: 729px;
 }
