POWR-482 Sass refactoring WIP

--- a/web/themes/custom/cloudy/scss/components/_comments.scss
+++ b/web/themes/custom/cloudy/scss/components/_comments.scss
@@ -159,7 +159,7 @@
     /* LTR */
     padding: 5px 2px 5px 5px;
     /* LTR */
-    background: $accent-light;
+    background: $brand-secondary;
 }
 
 [dir="rtl"] .comment--unpublished {
@@ -175,8 +175,8 @@
  */
 
 .unpublished .comment-text .comment-arrow {
-    border-left: 1px solid $accent-light;
-    border-right: 1px solid $accent-light;
+    border-left: 1px solid $brand-secondary;
+    border-right: 1px solid $brand-secondary;
 }
 
 .unpublished {
@@ -189,11 +189,11 @@
 
 .comment--unpublished .comment__text:after,
 .node--unpublished .comment__text:after {
-    border-right-color: $accent-light;
+    border-right-color: $brand-secondary;
     /* LTR */
 }
 
 [dir="rtl"] .comment--unpublished .comment__content:after,
 [dir="rtl"] .node--unpublished .comment__content:after {
-    border-left-color: $accent-light;
+    border-left-color: $brand-secondary;
 }
