--- a/web/themes/custom/cloudy/scss/components/_header.scss
+++ b/web/themes/custom/cloudy/scss/components/_header.scss
@@ -39,10 +39,9 @@
 }
 
 .header {
-    background-image: linear-gradient(to bottom right, $primary-accent, $primary-shade);
-    background-color: $primary-shade;
+    background-color: $brand-primary;
     border-top: 5px $yellow solid;
-    border-bottom: 5px $accent-shade solid;
+    border-bottom: 5px $secondary solid;
 }
 
 .banner {
