--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -1,16 +1,18 @@
 /* IMPORTS */
 
-// variables
-@import "_variables";
-// typography
-@import "_typography";
-// bootstrap
+// Variables
+@import "bootstrap-overrides";
+// Theme variables
+@import "theme-variables";
+// Bootstrap
 @import "bootstrap/scss/bootstrap";
-// icons
-@import "_icons";
-// mixins
-@import "_mixins";
-// barrio
-@import "components/barrio";
-// overrides
+// Mixins
+@import "mixins";
+// Typography
+@import "typography";
+// Icons
+@import "icons";
+// Components
+@import "components/components";
+// Custom
 @import "overrides";
