--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -3,14 +3,32 @@ Theme Name: Bootstrap 4 Sass
 Description: Bootstrap 4 with Sass
 */
 
+/* TYPOGRAPHY */
+
+/* Google Fonts */
+@import url("//fonts.googleapis.com/css?family=Open+Sans:300,400,300italic,400italic");
+
 /* GENERAL STYLES
 -------------------------------------------------*/
-
 body {
     background: $white;
-    font-weight: 300;
+    font-weight: $font-weight-light;
 }
 
+p {
+  line-height: $line-height-lg;
+}
+
+.lead {
+  color: $gray-800;
+  @extend .mb-5;
+}
+
+h1 {
+  font-weight: $font-weight-semibold;
+  @extend .mb-5;
+  line-height: $headings-line-height;
+}
 
 /* COLORS
 --------------------------------------------------*/
@@ -20,19 +38,19 @@ a {
 }
 
 .bg-inverse {
-    background: $primary-shade !important;
+    background: $primary;
 }
 
 .site-footer {
-    background: $gray-100 !important;
+    background: $gray-100;
 }
 
 .menu--main li a {
-    color: $primary-light;
+    color: $secondary;
 }
 
 .menu--account li a {
-    color: $primary-shade;
+    color: $secondary;
 }
 
 .site-name-slogan a {
@@ -92,11 +110,11 @@ a {
 
 .site-name-slogan a {
     color:#ffffff;
- }
+}
 
 // Service steps
 
- ol.steps {
+ol.steps {
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -147,11 +165,11 @@ ol.steps ol ol, ol.steps ol ul, ol.steps ul ol, ol.steps ul ul {
   @extend .btn-primary;
   @extend .btn-lg;
   color: $white;
-  background-color: $primary-shade;
+  background-color: $primary;
   border: none;
   &:hover {
     text-decoration: none;
-    background-color: darken($primary-shade, 5%);
+    background-color: darken($primary, 5%);
     border: none;
   }
   &:focus, &:not(:disabled):not(.disabled):active:focus {
@@ -211,6 +229,7 @@ td .form-check-input {
 .block-region-audiences .list-group-item-action {
   color: $link-color;
 }
+
 .topic {
   margin-bottom: .5rem;
 }
