--- a/web/themes/custom/cloudy/scss/components/_header.scss
+++ b/web/themes/custom/cloudy/scss/components/_header.scss
@@ -72,6 +72,7 @@
     height: 80px;
     img {
       max-height: 40px;
+      max-width: 120px;
     }
   }
   .navbar-toggler {
@@ -90,6 +91,7 @@
   .navbar {
     .navbar-brand img {
       max-height: 50px;
+      max-width: 150px;
     }
     .navbar-nav .nav-link {
       padding: 26.5px 1rem;
