POWR-482 Increase margins and update typography

--- a/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
+++ b/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
@@ -26,7 +26,11 @@ $link-hover-color: darken($link-color, 5%);
 $font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 // Lead paragraphs
-$lead-font-weight: 400;
+$lead-font-size: 1.2rem;
+$lead-font-weight: 300;
 
 // Headings
 $headings-line-height: 1.25;
+
+// Line heights
+$line-height-lg: 1.6;
