--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -17,16 +17,18 @@ body {
 
 p {
   line-height: $line-height-lg;
+  margin-bottom: $spacer * 1.5;
 }
 
 .lead {
-  color: $gray-800;
-  @extend .mb-5;
+  color: $gray-600;
+  margin-bottom: $spacer * 2.5;
+  line-height: $line-height-sm;
 }
 
 h1 {
   font-weight: $font-weight-semibold;
-  @extend .mb-5;
+  margin-bottom: $spacer * 2.5;
   line-height: $headings-line-height;
 }
 
@@ -142,6 +144,7 @@ li.step:before {
 li.step h3.step-title {
   position: relative;
   margin-left: 4rem;
+  margin-bottom: $spacer * 1.25;
 }
 
 li.step .field--name-field-step-instruction, li.step .field--name-field-step-action-button {
@@ -290,6 +293,10 @@ ul.pagination {
 
 .created, .updated {
   color: #505050;
+}
+
+.paragraph {
+  margin-bottom: $spacer * 1.75;
 }
 
 div.paragraph--type--document {
