POWR-491 Content editing tab styles

--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -110,11 +110,11 @@
     {% endif %}
     {% if page.tabs %}
       {% block tabs %}
-        <div class="tabs container-fluid bg-light" role="navigation">
+        <div class="content-tools container-fluid" role="navigation">
           {{ page.tabs }}
         </div>
       {% endblock %}
-    {% endif %}    
+    {% endif %}
     {% if page.highlighted %}
       <div class="highlighted">
         <aside class="{{ container }} section clearfix" role="complementary">
