POWR-491 Add more Boostrap overrides

--- a/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
+++ b/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
@@ -7,9 +7,10 @@ $cyan: #17a2b8;
 $green: #046a38;
 $red: #dc3545;
 $yellow: #ffb81c;
+$black: #000;
 
-$primary: $green;
-$secondary: $blue;
+$primary: $black;
+$secondary: $black;
 
 // Reassign color vars to semantic color scheme
 $brand-primary: $primary;
@@ -18,19 +19,25 @@ $brand-secondary: $secondary;
 /* Links */
 
 // Anchor elements
-$link-color: $blue-dark;
-$link-hover-color: darken($link-color, 5%);
+$link-hover-color: $black;
+$link-decoration:           none;
+$link-hover-color:          $blue-dark;
+$link-hover-decoration:     false;
 
 /* Typography */
 
-$font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+// Font stacks
 
-// Lead paragraphs
-$lead-font-size: 1.2rem;
-$lead-font-weight: 300;
+$font-family-sans-serif: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+$headings-font-family: 'Work Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 // Headings
-$headings-line-height: 1.25;
+$headings-color: $brand-primary;
 
-// Line heights
-$line-height-lg: 1.6;
+// Body
+
+$body-color: $brand-primary;
+
+/* Spacing */
+
+$spacer: 1em;
