POWR-491 Correct variable name

--- a/web/themes/custom/cloudy/scss/components/_vertical-tabs.scss
+++ b/web/themes/custom/cloudy/scss/components/_vertical-tabs.scss
@@ -82,7 +82,7 @@
 }
 
 .vertical-tabs__menu-item.is-selected .vertical-tabs__menu-item-title {
-    color: $black;
+    color: $brand-primary;
 }
 
 .vertical-tabs__menu-item-summary {
