POWR-491 Update header styles

--- a/web/themes/custom/cloudy/scss/components/_header.scss
+++ b/web/themes/custom/cloudy/scss/components/_header.scss
@@ -39,9 +39,7 @@
 }
 
 .header {
-    background-color: $brand-primary;
-    border-top: 5px $yellow solid;
-    border-bottom: 5px $secondary solid;
+  background: $brand-primary;
 }
 
 .banner {
@@ -49,14 +47,6 @@
   background-color: $dark;
   color: #f8f9fa;
   min-height: 70px;
-}
-
-
-.transportation .header {
-  background-image: linear-gradient(to bottom right, #505050, #000000);
-  background-color: $dark;
-  color: #f8f9fa;
-  border: 0px #505050 solid;
 }
 
 .transportation .banner {
