--- a/web/themes/custom/cloudy/scss/components/_components.scss
+++ b/web/themes/custom/cloudy/scss/components/_components.scss
@@ -1,43 +1,46 @@
-@import "_affix";
-@import "_alerts";
-@import "_book";
-@import "_book-navigation";
-@import "_breadcrumb";
-@import "_columns";
-@import "_comments";
-@import "_contextual";
-@import "_details";
-@import "_dropbutton.component";
-@import "_dropbutton";
-@import "_feed-icon";
-@import "_field";
-@import "_file";
-@import "_form";
-@import "_header";
-@import "_help";
-@import "_icons";
-@import "_image-button";
-@import "_indented";
-@import "_item-list";
-@import "_list-group";
-@import "_node";
-@import "_node-preview";
-@import "_page";
-@import "_search-form";
-@import "_shortcut";
-@import "_sidebar";
-@import "_site-footer";
-@import "_skip-link";
-@import "_table";
-@import "_tabledrag";
-@import "_tableselect";
-@import "_tablesort";
-@import "_tablesort-indicator";
-@import "_tabs";
-@import "_textarea";
-@import "_ui-widget";
-@import "_ui-dialog";
-@import "_user";
-@import "_vertical-tabs.component";
-@import "_vertical-tabs";
-@import "_views";
+@import "affix";
+@import "alerts";
+@import "book";
+@import "book-navigation";
+@import "breadcrumb";
+@import "buttons";
+@import "card";
+@import "columns";
+@import "comments";
+@import "content-tools";
+@import "contextual";
+@import "details";
+@import "dropbutton.component";
+@import "dropbutton";
+@import "feed-icon";
+@import "field";
+@import "file";
+@import "form";
+@import "header";
+@import "help";
+@import "icons";
+@import "image-button";
+@import "indented";
+@import "item-list";
+@import "list-group";
+@import "node";
+@import "node-preview";
+@import "page";
+@import "search-form";
+@import "shortcut";
+@import "sidebar";
+@import "site-footer";
+@import "skip-link";
+@import "table";
+@import "tabledrag";
+@import "tableselect";
+@import "tablesort";
+@import "tablesort-indicator";
+@import "tabs";
+@import "textarea";
+@import "ui-widget";
+@import "ui-dialog";
+@import "user";
+@import "vertical-tabs.component";
+@import "vertical-tabs";
+@import "views";
