POWR-491 Rename overrides to custom

--- a/web/themes/custom/cloudy/scss/_custom.scss
+++ b/web/themes/custom/cloudy/scss/_custom.scss
@@ -3,41 +3,18 @@ Theme Name: Bootstrap 4 Sass
 Description: Bootstrap 4 with Sass
 */
 
-/* TYPOGRAPHY */
+/* General */
 
-/* Google Fonts */
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,700,800');
 
-/* GENERAL STYLES
--------------------------------------------------*/
-body {
-    background: $white;
-    font-weight: $font-weight-light;
+#sidebar_second {
+  display: none;
 }
 
-p {
-  line-height: $line-height-lg;
-  margin-bottom: $spacer * 1.5;
+.time-to-complete  {
+  margin-bottom: var(--space-xl);
 }
 
-.lead {
-  color: $gray-600;
-  margin-bottom: $spacer * 2.5;
-  line-height: $line-height-sm;
-}
-
-h1 {
-  font-weight: $font-weight-semibold;
-  margin-bottom: $spacer * 2.5;
-  line-height: $headings-line-height;
-}
-
-/* COLORS
---------------------------------------------------*/
-
-a {
-    color: $link-color;
-}
+/* Colors */
 
 .bg-inverse {
     background: $primary;
@@ -59,16 +36,6 @@ a {
     text-decoration: none;
 }
 
-.card-group img {
-    margin: 0;
-    width: 100%;
-    height: auto;
-}
-
-.card-group .field--type-image {
-    margin: 0
-}
-
 .slick {
     width: 100%;
 }
@@ -77,7 +44,8 @@ a {
     margin: 0 15px;
 }
 
-// Groups
+/* Groups */
+
 .view-group-media-banner,
 .view-group-content-banner,
 .view-group-banner {
@@ -108,13 +76,15 @@ a {
   text-decoration: none;
 }
 
-// Site name
+/* Site name */
 
 .site-name-slogan a {
-    color:#ffffff;
+  color: $white;
 }
 
-// Service steps
+/* Service */
+
+// Steps
 
 ol.steps {
   margin: 0;
@@ -125,7 +95,12 @@ ol.steps {
 li.step {
   position: relative;
   counter-increment: step-counter;
-  margin-bottom: 1rem;
+  margin-bottom: var(--space-xl);
+}
+
+li.step a:not(.btn-cta, .btn-cta-outline) {
+  font-weight: $font-weight-semibold;
+  border-bottom: 2px solid;
 }
 
 li.step:before {
@@ -133,11 +108,14 @@ li.step:before {
   position: absolute;
   left: 0;
   top: 0;
-  font-size: 1.5rem;
-  border: 1px #909090 solid;
-  color: #505050;
-  font-weight: 400;
-  padding: .3rem 1rem;
+  font-weight: $font-weight-semibold;
+  height: calc(var(--space-xs) * 5);
+  width: calc(var(--space-xs) * 5);
+  border: 1px $primary solid;
+  line-height: calc(var(--space-xs) * 5);
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
   border-radius: 50%;
 }
 
@@ -161,34 +139,7 @@ ol.steps ol ol, ol.steps ol ul, ol.steps ul ol, ol.steps ul ul {
   margin-bottom: 0;
 }
 
-// Paragraph buttons
-
-.btn-cta {
-  @extend .btn;
-  @extend .btn-primary;
-  @extend .btn-lg;
-  color: $white;
-  background-color: $primary;
-  border: none;
-  &:hover {
-    text-decoration: none;
-    background-color: darken($primary, 5%);
-    border: none;
-  }
-  &:focus, &:not(:disabled):not(.disabled):active:focus {
-    box-shadow: none;
-  }
-}
-
-.btn-cta-outline {
-  @extend .btn;
-  @extend .btn-outline-primary;
-  @extend .btn-lg;
-  &:focus, &:not(:disabled):not(.disabled):active:focus {
-    box-shadow: none;
-  }
-}
-
+/* Paragraphs */
 
 *[class*="btn--"]:before {
   display: inline-block;
@@ -209,7 +160,7 @@ ol.steps ol ol, ol.steps ol ul, ol.steps ul ol, ol.steps ul ul {
   margin-right: .5rem;
 }
 
-// Form buttons
+/* Forms */
 
 form .btn {
   margin-bottom: 0;
@@ -221,7 +172,7 @@ td .form-check-input {
     margin-left: 0rem;
 }
 
-// Homepage customizations
+/* Homepage */
 
 .block-region-actions .icon,
 .block-region-audiences .icon {
@@ -239,7 +190,6 @@ td .form-check-input {
 
 .topic h3 {
   font-size: $font-size-lg;
-  font-family: $font-family-sans-serif;
   margin-bottom: .5rem;
 }
 
@@ -295,8 +245,12 @@ ul.pagination {
   color: #505050;
 }
 
-.paragraph {
-  margin-bottom: $spacer * 1.75;
+.field__item .paragraph div:not(.field--name-field-quoted-text):last-of-type > :nth-last-child(1) {
+  margin-bottom: 0;
+}
+
+.paragraph:last-of-type {
+  margin-bottom: var(--space-xxl);
 }
 
 div.paragraph--type--document {
@@ -304,11 +258,13 @@ div.paragraph--type--document {
 }
 
 blockquote.blockquote {
-  border-left: 5px solid $gray-300;
+  border-left: 5px solid $brand-primary;
   padding-left: 1rem;
 }
 
-// External links
+/* Links */
+
+// External
 
 span.ext {
   &:after {
@@ -321,7 +277,8 @@ span.mailto::before {
   background:none;
 }
 
-/* Hide the extra spans when printing. */
+// Hide the extra spans when printing.
+
 @media print {
   span.ext,
   span.mailto {
@@ -330,7 +287,7 @@ span.mailto::before {
   }
 }
 
-/* Add some margin on floated images */
+// Add some margin on floated images
 
 .float-left .figure{
   margin-right: 2rem;
