POWR-491 Update breadcrumbs with new variables

--- a/web/themes/custom/cloudy/scss/components/_breadcrumb.scss
+++ b/web/themes/custom/cloudy/scss/components/_breadcrumb.scss
@@ -4,9 +4,23 @@
  */
 
 .breadcrumb {
-    font-size: 0.929em$font-size-sm;
-    padding: 0.75rem 0;
-    background: none;
+    background: transparent;
+    padding: var(--space-md) 0;
+    margin-bottom: var(--space-md);
+    font-size: 1rem;
+    .breadcrumb-item  {
+      a {
+        font-size: 0.8em;
+        font-weight: $font-weight-semibold;
+        border-bottom: 2px solid;
+      }
+      &:before {
+        font-size: 0.8em;
+        color: $brand-primary;
+        padding: 0 var(--space-xxs);
+        font-weight: $font-weight-semibold;
+      }
+    }
     ol {
         margin:0;
     }
@@ -15,4 +29,9 @@
 .region-breadcrumb {
     padding: 0 15px;
     width: 100%;
+}
+
+
+.breadcrumb-item + .breadcrumb-item {
+  padding: 0;
 }
