POWR-491 Exclude from link underline

--- a/web/themes/custom/cloudy/scss/base/_typography.scss
+++ b/web/themes/custom/cloudy/scss/base/_typography.scss
@@ -67,11 +67,6 @@
     line-height: var(--body-line-height);
   }
 
-  .lead {
-    font-weight: $font-weight-bold;
-    margin-bottom: var(--space-xl);
-  }
-
   p {
     font-weight: $font-weight-light;
     font-size: var(--text-base-size);
@@ -79,8 +74,14 @@
     line-height: var(--body-line-height);
   }
 
-  a:not(.btn-cta, .btn-cta-outline) {
+  .lead {
+    font-weight: $font-weight-bold;
+    margin-bottom: var(--space-xl);
+  }
+
+  a:not(.nav-link):not(.btn-cta):not(.btn-cta-outline) {
     font-weight: $font-weight-semibold;
     border-bottom: 2px solid $brand-primary;
   }
 }
+
