POWR-491 Update style imports

--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -2,17 +2,13 @@
 
 // Variables
 @import "bootstrap-overrides";
-// Theme variables
-@import "theme-variables";
 // Bootstrap
 @import "bootstrap/scss/bootstrap";
-// Mixins
-@import "mixins";
-// Typography
-@import "typography";
-// Icons
-@import "icons";
+// Utilities
+@import "utilities/utilities";
+// Base
+@import "base/base";
 // Components
 @import "components/components";
 // Custom
-@import "overrides";
+@import "custom";
