POWR-491 Update heading font

--- a/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
+++ b/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
@@ -29,7 +29,7 @@ $link-hover-decoration:     false;
 // Font stacks
 
 $font-family-sans-serif: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
-$headings-font-family: 'Work Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+$headings-font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 // Headings
 $headings-color: $brand-primary;
