POWR-509 Extra height setting class on cards was causing error

--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--card.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--card.html.twig
@@ -2,7 +2,7 @@
 {% block paragraph %}
   {% block field %}
     {% block content %}
-      <div {{ attributes.addClass('card', 'clearfix', 'h-100') }}>
+      <div {{ attributes.addClass('card', 'clearfix') }}>
         <div class="card-body">
           <h4 class="card-title">{{ content.field_card_title }}</h4>
           {{ content.field_text }}
