--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -128,28 +128,27 @@ li.step {
   margin-bottom: 1rem;
 }
 
-li.step:before {
-  content: counter(step-counter);
-  position: absolute;
-  left: 0;
-  top: 0;
-  font-size: 1.5rem;
-  border: 1px #909090 solid;
-  color: #505050;
-  font-weight: 400;
-  padding: .3rem 1rem;
-  border-radius: 50%;
-}
 
-li.step h3.step-title {
-  position: relative;
-  margin-left: 4rem;
-  margin-bottom: $spacer * 1.25;
-}
-
-li.step .field--name-field-step-instruction, li.step .field--name-field-step-action-button {
-  position: relative;
-  margin-left: 4rem;
+li.step {
+  &:before {
+    content: counter(step-counter);
+    position: absolute;
+    left: 0;
+    top: 0;
+    font-size: 1.5rem;
+    border: 1px #909090 solid;
+    color: #505050;
+    font-weight: 400;
+    padding: .3rem 1rem;
+    border-radius: 50%;
+  }
+  > * {
+    position: relative;
+    margin-left: 4rem;
+  }
+  .step-title {
+    margin-bottom: $spacer * 1.25;
+  }
 }
 
 ol.steps dl, ol.steps ol, ol.steps ul {
