POWR-480 Style group menus and remove media group menu

--- a/web/themes/custom/cloudy/scss/components/_components.scss
+++ b/web/themes/custom/cloudy/scss/components/_components.scss
@@ -20,6 +20,7 @@
 @import "_indented";
 @import "_item-list";
 @import "_list-group";
+@import "_nav";
 @import "_node";
 @import "_node-preview";
 @import "_page";
