POWR-485 - output service steps in a more standard way, so that we don't need to manually retrieve paragraph field content

--- a/web/themes/custom/cloudy/templates/field/field--field-service-mode.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--field-service-mode.html.twig
@@ -6,16 +6,6 @@
  * This is an override of field.html.twig for the service mode field. See that
  * template for documentation about its details and overrides.
  *
- * Available variables:
- * - attributes: HTML attributes for the containing span element.
- * - items: List of all the field items. Each item contains:
- *   - attributes: List of HTML attributes for each item.
- *   - content: The field item content.
- * - entity_type: The entity type to which the field belongs.
- * - field_name: The name of the field.
- * - field_type: The type of the field.
- * - label_display: The display settings for the label.
- *
  * @see field.html.twig
  */
 #}
@@ -28,20 +18,15 @@
     </li>
   {% endfor %}
 </ul>
-<div class="tab-content mb-3" id="serviceModesContent">
-  {% for item in items if key|first != '#' %}
-    <div class="tab-pane fade{% if loop.first %} show active{% endif %}" id="pane-{{ loop.index }}" role="tabpanel" aria-labelledby="tab-{{ loop.index }}">
-      {% if item.content['#paragraph'].field_step_by_step_instructions|length == 1 %}
-        {% for step in item.content['#paragraph'].field_step_by_step_instructions %}
-          <div class="onestep">{{ drupal_entity('paragraph', step.target_id) }}</div>
+
+{% if multiple %}
+    <div class="tab-content mb-3" id="serviceModesContent">
+        {% for item in items %}
+            <div{{ item.attributes }}>{{ item.content }}</div>
         {% endfor %}
-      {% else %}
-        <ol class="steps">
-        {% for step in item.content['#paragraph'].field_step_by_step_instructions %}
-          <li class="step">{{ drupal_entity('paragraph', step.target_id) }}</li>
-        {% endfor %}
-        </ol>
-      {% endif %}
     </div>
-  {% endfor %}
-</div>
+{% else %}
+    {% for item in items %}
+        <div class="tab-content mb-3" id="serviceModesContent">{{ item.content }}</div>
+    {% endfor %}
+{% endif %}
