--- a/web/themes/custom/cloudy/templates/field/field--paragraph--field-step-by-step-instructions.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--paragraph--field-step-by-step-instructions.html.twig
@@ -6,26 +6,17 @@
  * This is an override of field.html.twig for the step title field. See that
  * template for documentation about its details and overrides.
  *
- * Available variables:
- * - attributes: HTML attributes for the containing span element.
- * - items: List of all the field items. Each item contains:
- *   - attributes: List of HTML attributes for each item.
- *   - content: The field item content.
- * - entity_type: The entity type to which the field belongs.
- * - field_name: The name of the field.
- * - field_type: The type of the field.
- * - label_display: The display settings for the label.
- *
  * @see field.html.twig
  */
 #}
-{%
-  set classes = [
-    'steps'
-  ]
-%}
-<ol{{ attributes.addClass(classes) }}>
-  {%- for item in items -%}
-    {{ item.content }}
-  {%- endfor -%}
-</ol>
+
+{% if items|length == 1 %}
+  <div class="onestep">{{ items[0].content }}</div>
+{% else %}
+  <ol class="steps">
+    {%- for item in items -%}
+      <li class="step">{{ item.content }}</li>
+    {%- endfor -%}
+  </ol>
+{% endif %}
+
