POWR-485 - re-added the classes and logic needed to make the tab panels work correctly.

--- a/web/themes/custom/cloudy/templates/field/field--field-service-mode.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--field-service-mode.html.twig
@@ -21,8 +21,8 @@
 
 {% if multiple %}
     <div class="tab-content mb-3" id="serviceModesContent">
-        {% for item in items %}
-            <div{{ item.attributes }}>{{ item.content }}</div>
+        {% for item in items if key|first != '#' %}
+            <div class="tab-pane fade{% if loop.first %} show active{% endif %}" id="pane-{{ loop.index }}" role="tabpanel" aria-labelledby="tab-{{ loop.index }}">{{ item.content }}</div>
         {% endfor %}
     </div>
 {% else %}
