POWR-323 - remove title from tab link, focus first child element in selected pane instead of tab link.

--- a/web/themes/custom/cloudy/templates/field/field--field-service-mode.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--field-service-mode.html.twig
@@ -16,8 +16,7 @@
         {% if loop.first != true %} tabindex="-1" aria-selected="false"{% endif %}
         {% if loop.first %} aria-selected="true"{% endif %} 
         aria-controls="pane-{{ loop.index }}"
-        class="nav-link{% if loop.first %} active{% endif %}"
-        title="Use arrow keys to navigate between tabs">
+        class="nav-link{% if loop.first %} active{% endif %}">
         {{ item.content['#paragraph'].field_service_modes.entity.name.value }}
       </a>
     </li>
