POWR-426 Remove container around breadcrumb and use utility classes

--- a/web/themes/custom/cloudy/templates/navigation/breadcrumb.html.twig
+++ b/web/themes/custom/cloudy/templates/navigation/breadcrumb.html.twig
@@ -10,7 +10,7 @@
 {{ attach_library('bootstrap_barrio/breadcrumb') }}
 
 {% if breadcrumb %}
-  <nav class="container" role="navigation d-flex m-0" aria-label="breadcrumb">
+  <nav class="d-flex m-0" role="navigation" aria-label="breadcrumb">
     <h2 id="system-breadcrumb" class="visually-hidden">{{ 'Breadcrumb'|t }}</h2>
     <ol class="breadcrumb">
     {% for item in breadcrumb %}
