POWR-426 Update paragraphs to use configurable paragraph template

--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--form-app-button.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--form-app-button.html.twig
@@ -1,7 +1,4 @@
 {% embed 'paragraph.html.twig' with {
-  'margin': '3',
-  'classes' : [
-    'card-deck',
-  ],
+  'margin' : '0'
 } %}
 {% endembed %}
