--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--card.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--card.html.twig
@@ -1,14 +1,14 @@
 {% extends 'paragraph.html.twig' %}
 {% block paragraph %}
-  {% block field %}
+  <div{{ attributes.addClass('card', 'clearfix') }}>
     {% block content %}
-      <div {{ attributes.addClass('card', 'clearfix') }}>
-        <div class="card-body">
+      <div class="card-body">
+        {%- if content.field_card_title|render|striptags|trim is not empty -%}
           <h4 class="card-title">{{ content.field_card_title }}</h4>
-          {{ content.field_text }}
-          {{ content.field_step_action_button}}
-        </div>
+        {%- endif -%}
+        {{ content.field_text }}
+        {{ content.field_step_action_button}}
       </div>
     {% endblock %}
-  {% endblock %}
+  </div>
 {% endblock %}
