--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--columns-equal.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--columns-equal.html.twig
@@ -1,8 +1,8 @@
-{% extends 'paragraph.html.twig' %}
-{% block content %}
-<div class="container-fluid">
-  <div class="row">
-    {{ content }}
-  </div>
-</div>
-{% endblock %}
+{% embed 'paragraph.html.twig' with {
+  'margin' : '0',
+  'classes' : 'row',
+} %}
+  {% block content %}
+      {{ content }}
+  {% endblock %}
+{% endembed %}
